--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
     <header>
       <h1>SPEEDSTARMOTOTS CARDEALERSHIP</h1>
       <P>Find youself in the only house of perfomance and get the best models of cars in the world.  </P>
-      <p> <image src = "bmw.jfif"/> </p>
+      <P> <image src = "bmw.jfif"/> </P>
         
