--- a/index.html
+++ b/index.html
@@ -9,4 +9,6 @@
     <header>
       <h1>SPEEDSTARMOTOTS CARDEALERSHIP</h1>
       <P>Find youself in the only house of perfomance and get the best models of cars in the world.  </P>
+      <image src = "bmw.jfif"/>
+      <image src = "bmw2.jfif"/>
         
