--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <title>
       Speedstarmotors  
     </title>
+    <style>
+      body {
+        background-color: lightgrey;
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+      }
+      
+    </style>
   </head>
   <body>
     <header>
