--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     <header>
       <h1>SPEEDSTARMOTOTS CARDEALERSHIP</h1>
       <P>Find youself in the only house of perfomance and get the best models of cars in the world.  </P>
-      <image src = "bmw3.jfif" width = "150" height = "150"/>
-      <image src = "bmw2.jfif" width = "150" height = "150"/>
+      <image src = "bmw3.jfif" width = "150%" height = "150px"/>
+      <image src = "bmw2.jfif" width = "150%" height = "150px"/>
         
