--- a/index.html
+++ b/index.html
@@ -1,23 +1,49 @@
-<!DOCTYOE html>
-<html>
-  <head>
-    <title>
-      Speedstarmotors  
-    </title>
-    <style>
-      body {
-        background-color: lightgrey;
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-      }
-      
-    </style>
-  </head>
-  <body>
-    <header>
-      <h1>SPEEDSTARMOTOTS CARDEALERSHIP</h1>
-      <P>Find youself in the only house of perfomance and get the best models of cars in the world.  </P>
-      <image src = "bmw3.jfif" width = "150%" height = "150px"/>
-      <image src = "bmw2.jfif" width = "150%" height = "150px"/>
-        
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Speedstar Motors</title>
+  <style>
+    body {
+      background-color: lightgrey;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      text-align: center;
+      padding: 20px;
+      background-color: #333;
+      color: white;
+    }
+
+    h1 {
+      margin: 0;
+    }
+
+    p {
+      margin-top: 5px;
+    }
+
+    img {
+      width: 100%;
+      height: auto;
+      max-width: 500px; /* Adjust as needed */
+      margin: 20px 0;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>SPEEDSTAR MOTORS CAR DEALERSHIP</h1>
+    <p>Find yourself in the only house of performance and get the best models of cars in the world.</p>
+  </header>
+
+  <img src="bmw3.jfif" alt="BMW Image 1">
+  <img src="bmw2.jfif" alt="BMW Image 2">
+
+</body>
+</html>
