--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
     }
 
     img {
-      width: 100%;
+      width: 50%; /* Set to 50% for medium size */
       height: auto;
       max-width: 500px; /* Adjust as needed */
       margin: 20px 0;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
     }
   </style>
 </head>
@@ -43,7 +46,7 @@
   </header>
 
   <img src="bmw3.jfif" alt="BMW Image 1">
-  <img src="bmw2.jfif" alt="BMW Image 2">
+  <img src="bmw4.jfif" alt="BMW Image 2">
 
 </body>
 </html>
