--- a/index.html
+++ b/index.html
@@ -1,52 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Speedstar Motors</title>
-  <style>
-    body {
-      background-color: lightgrey;
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Speedstar Motors - Car Dealership</title>
+    <style>
+        body {
+            background-color: lightgrey;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
 
-    header {
-      text-align: center;
-      padding: 20px;
-      background-color: #333;
-      color: white;
-    }
+        header {
+            text-align: center;
+            padding: 20px;
+            background-color: #333;
+            color: white;
+        }
 
-    h1 {
-      margin: 0;
-    }
+        h1, h2, p {
+            margin: 0;
+        }
 
-    p {
-      margin-top: 5px;
-    }
+        .topnav {
+            overflow: hidden;
+            background-color: #333;
+            text-align: center;
+        }
 
-    img {
-      width: 50%; /* Set to 50% for medium size */
-      height: auto;
-      max-width: 500px; /* Adjust as needed */
-      margin: 20px 0;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-    }
-  </style>
+        .topnav a {
+            display: inline-block;
+            color: #f2f2f2;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        .topnav input[type=text] {
+            float: right;
+            padding: 6px;
+            margin-top: 8px;
+            margin-right: 16px;
+            border: none;
+            font-size: 17px;
+        }
+
+        h2 {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        .image-container {
+            display: flex;
+            justify-content: space-between;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        .image-container img {
+            width: 30%; /* Adjust as needed */
+            max-width: 200px; /* Maximum width for each image */
+            margin: 10px;
+        }
+    </style>
 </head>
 <body>
+    <header>
+        <h1>SPEEDSTAR MOTORS</h1>
+        <p>The one and only house of performance.</p>
+        <div class="topnav">
+            <a class="active" href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
+            <input type="text" placeholder="Search..">
+        </div>
+    </header>
 
-  <header>
-    <h1>SPEEDSTAR MOTORS CAR DEALERSHIP</h1>
-    <p>Find yourself in the only house of performance and get the best models of cars in the world.</p>
-  </header>
-
-  <img src="bmw3.jfif" alt="BMW Image 1">
-  <img src="bmw4.jfif" alt="BMW Image 2">
-
+    <h2>BMW M4 Gallery</h2>
+    <div class="image-container">
+        <img src="bmwr1.jpg" alt="BMW M4 Image 1">
+    </div>
 </body>
 </html>
