--- a/index.html
+++ b/index.html
@@ -76,9 +76,11 @@
         </div>
     </header>
 
-    <h2>BMW M4 Gallery</h2>
+    <h2>BMW M4 </h2>
     <div class="image-container">
         <img src="bmwr1.jpg" alt="BMW M4 Image 1">
+        <img src="bmwr2.jpg" alt="BMW M4 Image 2">
+        <img src="bmwr3.jpg" alt="BMW M4 Image 3">
     </div>
 </body>
 </html>
