--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Speedstar Motors - Car Dealership</title>
     <style>
         body {
@@ -58,8 +56,8 @@
         }
 
         .image-container img {
-            width: 30%; /* Adjust as needed */
-            max-width: 200px; /* Maximum width for each image */
+            width: 30%; /* 
+            max-width: 200px; 
             margin: 10px;
         }
     </style>
@@ -67,7 +65,7 @@
 <body>
     <header>
         <h1>SPEEDSTAR MOTORS</h1>
-        <p>The one and only house of performance.</p>
+        <p>Welcome to the one and only house of performance.</p>
         <div class="topnav">
             <a class="active" href="#home">Home</a>
             <a href="#about">About</a>
