--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Speedstar Motors - Car Dealership</title>
     <style>
         body {
-            background-color: lightgrey;
+            background: linear-gradient(to right, #56ccf2, #2f80ed), url('bmwe.webp') center/cover fixed;
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
