--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Speedstar Motors - Car Dealership</title>
     <style>
         body {
-            background: linear-gradient(to right, #56ccf2, #2f80ed), url('bmwe.webp') center/cover fixed;
+            background: url('bmwe.webp') center/cover fixed no-repeat;
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
@@ -56,8 +56,7 @@
         }
 
         .image-container img {
-            width: 30%; /* 
-            max-width: 200px; 
+            width: 30%;
             margin: 10px;
         }
     </style>
