--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         header {
             text-align: center;
             padding: 20px;
-            background-color: #333;
+            background-color: transparent; /* Removed the gray background */
             color: white;
         }
 
@@ -23,7 +23,7 @@
 
         .topnav {
             overflow: hidden;
-            background-color: #333;
+            background-color: transparent; /* Removed the gray background */
             text-align: center;
         }
 
@@ -46,6 +46,7 @@
         h2 {
             text-align: center;
             margin-top: 20px;
+            color: white; /* Ensuring text is visible against the background */
         }
 
         .image-container {
@@ -81,3 +82,4 @@
     </div>
 </body>
 </html>
+
