--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 </head>
 <body>
     <header>
+        <img class="logo" src="logo.png" alt="Speedstar Motors Logo">
         <h1>SPEEDSTAR MOTORS</h1>
         <p>Welcome to the one and only house of performance.</p>
         <div class="topnav">
