--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
         }
 
         header {
+            position: relative;
             text-align: center;
             padding: 20px;
-            background-color: transparent; /* Removed the gray background */
+            background-color: transparent;
             color: white;
         }
 
@@ -23,7 +24,7 @@
 
         .topnav {
             overflow: hidden;
-            background-color: transparent; /* Removed the gray background */
+            background-color: transparent;
             text-align: center;
         }
 
@@ -43,10 +44,17 @@
             font-size: 17px;
         }
 
+        .logo {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            width: 80px; /* Adjust the size as needed */
+        }
+
         h2 {
             text-align: center;
             margin-top: 20px;
-            color: white; /* Ensuring text is visible against the background */
+            color: white;
         }
 
         .image-container {
@@ -74,7 +82,14 @@
             <input type="text" placeholder="Search..">
         </div>
     </header>
+
+    <h2>BMW M4 </h2>
+    <div class="image-container">
+        <img src="bmwr1.jpg" alt="BMW M4 Image 1">
+        <img src="bmwr2.jpg" alt="BMW M4 Image 2">
+        <img src="bmwr3.jpg" alt="BMW M4 Image 3">
     </div>
 </body>
 </html>
+
 
