--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
             top: 10px;
             right: 10px;
             width: 80px; /* Adjust the size as needed */
+            background-color: rgba(255, 255, 255, 0.5); /* Semi-transparent white background */
+            padding: 5px; /* Add padding for visibility */
+            border-radius: 5px; /* Optional: Add rounded corners */
         }
 
         h2 {
@@ -72,7 +75,9 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="logo.png" alt="Speedstar Motors Logo">
+        <div class="logo">
+            <img src="logo.png" alt="Speedstar Motors Logo">
+        </div>
         <h1>SPEEDSTAR MOTORS</h1>
         <p>Welcome to the one and only house of performance.</p>
         <div class="topnav">
@@ -82,14 +87,9 @@
             <input type="text" placeholder="Search..">
         </div>
     </header>
-
-    <h2>BMW M4 </h2>
-    <div class="image-container">
-        <img src="bmwr1.jpg" alt="BMW M4 Image 1">
-        <img src="bmwr2.jpg" alt="BMW M4 Image 2">
-        <img src="bmwr3.jpg" alt="BMW M4 Image 3">
     </div>
 </body>
 </html>
+
 
 
