--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         .logo {
             position: absolute;
             top: 10px;
-            right: 10px;
-            width: 80px; /* Adjust the size as needed */
+            left: 10px;
+            width: 40px; /* Adjust the size as needed */
             background-color: rgba(255, 255, 255, 0.5); /* Semi-transparent white background */
             padding: 5px; /* Add padding for visibility */
             border-radius: 5px; /* Optional: Add rounded corners */
@@ -87,9 +87,14 @@
             <input type="text" placeholder="Search..">
         </div>
     </header>
+
+    <h2>BMW M4 </h2>
+    <div class="image-container">
+        <img src="bmwr1.jpg" alt="BMW M4 Image 1">
+        <img src="bmwr2.jpg" alt="BMW M4 Image 2">
+        <img src="bmwr3.jpg" alt="BMW M4 Image 3">
     </div>
 </body>
 </html>
-
 
 
