--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
             position: absolute;
             top: 10px;
             left: 10px;
-            width: 10px; /* Adjust the size as needed */
-            background-color: rgba(255, 255, 255, 0.5); /* Semi-transparent white background */
-            padding: 5px; /* Add padding for visibility */
-            border-radius: 5px; /* Optional: Add rounded corners */
+            width: 60px; /* Adjust the size as needed */
+            background-color: rgba(255, 255, 255, 0.5); 
+            padding: 5px;
+            border-radius: 5px; 
         }
 
         h2 {
