--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         .topnav {
             overflow: hidden;
             background-color: transparent;
-            text-align: center;
+            text-align: left;
+            padding: 20px;
         }
 
         .topnav a {
