--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             float: right;
             padding: 20px;
             font-size: 17px;
+            background: tranparent;
         }
 
        
