--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
             padding: 20px;
             font-size: 17px;
             background: tranparent;
+            color: white;
+            boader: none;
         }
 
        
