--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             padding: 20px;
             font-size: 17px;
             background-color: transparent;
+            boarder: none;
         }
 
        
