--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Speedstar Motors - Car Dealership</title>
     <style>
         body {
-            background: url('bmwl2.jpg') center/cover fixed no-repeat;
+            background: url('bmwp.jpg') center/cover fixed no-repeat;
             font-family:'Roboto' , sans-serif;
             margin: 0;
             padding: 0;
