--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <p>Welcome to the one and only house of performance.</p>
         <div class="topnav">
             <a class="active" href="#home">Home</a>
-            <a href="#about">About</a>
+            <a href="index.html">About</a>
             <a href="#contact">Contact</a>
             <input type="text" placeholder="Search..">
         </div>
