--- a/index3.html
+++ b/index3.html
@@ -10,7 +10,7 @@
       <h1>
         our history
       </h1>
-      <a href = "index.html">return</a href>
+      <a href = "index.html">return</a hre>
     </p>
   </body>
   </html>
