--- a/index3.html
+++ b/index3.html
@@ -8,7 +8,17 @@
   <body>
     <p> 
       <h1>
-        our history
+        About Us - SpeedStar Motors
+
+Founded by Carl Junior, SpeedStar Motors has not only thrived but has completely dominated the industry with minimal competition. Originally named by his business partner Theo Leburu in 2019, our dealership has rapidly become a driving force in the automotive market, boasting five successful years since its launch.
+
+Our Legacy
+
+Since our establishment in 2019, SpeedStar Motors has been dedicated to delivering top-notch vehicles and unparalleled service. With an unwavering commitment to quality and customer satisfaction, our history speaks volumes about the trust and reliability we've cultivated over the years.
+
+Discover a legacy of excellence at SpeedStar Motors.
+
+[Contact Information] [Address] [Phone Number] [Email] [Website]
       </h1>
       <a href = "index.html">return</a hre>
     </p>
