--- a/index3.html
+++ b/index3.html
@@ -7,8 +7,8 @@
 </head>
   <body>
     <p> 
-      <h1>
-        About Us - SpeedStar Motors
+      <h5>
+         - SpeedStar Motors
 
 Founded by Carl Junior, SpeedStar Motors has not only thrived but has completely dominated the industry with minimal competition. Originally named by his business partner Theo Leburu in 2019, our dealership has rapidly become a driving force in the automotive market, boasting five successful years since its launch.
 
@@ -19,7 +19,7 @@ Since our establishment in 2019, SpeedStar Motors has been dedicated to deliveri
 Discover a legacy of excellence at SpeedStar Motors.
 
 [Contact Information] [Address] [Phone Number] [Email] [Website]
-      </h1>
+      </h5>
       <a href = "index.html">return</a hre>
     </p>
   </body>
