--- a/index.html
+++ b/index.html
@@ -76,6 +76,20 @@
     </header>
     </div>
 </body>
+    <footer>
+     Visit Us:
+[Speedstarmotors]
+[Private Bag 501, Gabrone]
+
+Contact:
+Phone: [+ 333 992 11]
+Email: [carlcoenzipit@gmail.com]
+
+Follow Us: 
+[Social Media Icons/Links
+
+© [2020] [SPEEDSTARMOTORS] | All Rights Reserved
+    </footer>
 </html>
 
 
