--- a/index.html
+++ b/index.html
@@ -61,6 +61,20 @@
             width: 30%;
             margin: 10px;
         }
+         footer {
+            text-align: center;
+            padding: 20px;
+            background-color: transparent;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+        }
+        .social-icons a {
+            display: inline-block;
+            margin: 0 10px;
+            color: white;
+            font-size: 20px;
+        }
     </style>
 </head>
 <body>
@@ -71,7 +85,7 @@
         <br> </br>
         <br> </br>
         <p>"Driving Dreams, Igniting Passions: Where Every Mile Unveils a Journey of Excellence,<br> </br> 
-            SpeedStar Motors Pioneers a Legacy of Unmatched Quality, Unprecedented Service, <br> </br>and Enduring Trust. Your Destination for Automotive Excellence – Because Your Journey Deserves the Finest."
+            SpeedStar Motors Pioneers a Legacy of Unmatched Quality, Unprecedented Service, <br> </br>and Enduring Trust. Your Destination for Automotive Excellence – <br> </br> Because Your Journey Deserves the Finest."
 
 
 
@@ -103,9 +117,11 @@
 Contact:
 Phone: [+ 333 992 11]
 Email: [carlcoenzipit@gmail.com]
-
-Follow Us: 
-[Social Media Icons/Links
+         <div class="social-icons">
+            <a href="[your_facebook_url]" target="_blank">Facebook</a>
+            <a href="[your_twitter_url]" target="_blank">Twitter</a>
+            <a href="[your_instagram_url]" target="_blank">Instagram</a>
+        </div>
 
 © [2020] [SPEEDSTARMOTORS] | All Rights Reserved
     </footer>
