--- a/index3.html
+++ b/index3.html
@@ -6,6 +6,15 @@
 </title>
 </head>
   <body>
+    <style>
+        body {
+            background: url('bmwp.jpg') center/cover fixed no-repeat;
+            font-family: 'Roboto', sans-serif;
+            margin: 0;
+            padding: 0;
+            color: white;
+        }
+
     <p> 
       <h5>
          - SpeedStar Motors
