--- a/index3.html
+++ b/index3.html
@@ -9,6 +9,7 @@
     <style>
         body {
             background: url('bmwp.jpg') center/cover fixed no-repeat;
+            opacity: 20%
         }
 
     <p> 
