--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     <div class="topnav">
         <a class="active" href="#home">Home</a>
         <a href="index3.html">About us</a>
+        <a href="index4.html">Services</a>
         <input type="text" placeholder="Search..">
     </div>
 
