--- a/index4.html
+++ b/index4.html
@@ -6,12 +6,13 @@
 </title>
 </head>
   <body>
-    <p> 
+    <h1>we offer.. </h1>
+      <p> 
+        after buying a car from us we'll give you a five year warantee ,
       <h5>
          Services
 
 
-[Contact Information] [Address] [Phone Number] [Email] [Website]
       </h5>
       <a href = "index.html">return</a hre>
     </p>
