--- a/index4.html
+++ b/index4.html
@@ -2,6 +2,19 @@
 <html>
 <head>
 <title>
+  <style>
+        body {
+            background: url('bmwb.jpg') center/cover fixed no-repeat;
+            font-family: 'Roboto', sans-serif;
+            margin: 0;
+            padding: 0;
+            color: white;
+        }
+     .topnav {
+            background-color: transparent;
+            text-align: center;
+            padding: 20px;
+        }
   Services
 </title>
 </head>
