--- a/index4.html
+++ b/index4.html
@@ -1,8 +1,9 @@
 <!DOCTYPE>
 <html>
 <head>
-<title>
-  <style>
+<title>services
+</title>
+   <style>
         body {
             background: url('bmwb.jpg') center/cover fixed no-repeat;
             font-family: 'Roboto', sans-serif;
@@ -15,18 +16,11 @@
             text-align: center;
             padding: 20px;
         }
-  Services
-</title>
 </head>
   <body>
     <h1>we offer.. </h1>
       <p> 
-        after buying a car from us we'll give you a five year warantee ,
-      <h5>
-         Services
-
-
-      </h5>
+        after buying a car from us we'll give you a five year warantee 
       <a href = "index.html">return</a hre>
     </p>
   </body>
