--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         Email: [carlcoenzipit@gmail.com]
 
         <div class="social-icons">
-            <a href="[your_facebook_url]" target="_blank">Facebook</a>
+            <a href="https://www.facebook.com/BMW/" target="_blank">Facebook</a>
             <a href="[your_twitter_url]" target="_blank">Twitter</a>
             <a href="[your_instagram_url]" target="_blank">Instagram</a>
         </div>
