--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>SpeedStar Motors - Car Dealership</title>
     <style>
         body {
-            background: url('bmwb.jpg') center/cover fixed no-repeat;
+            background: url('bmwl.jpg') center/cover fixed no-repeat;
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
