--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>SpeedStar Motors - Car Dealership</title>
-    
+    <link href = "style.css" rel = "stylesheet">
 </head>
 <body>
     <header>
